--- a/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.css
+++ b/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.css
@@ -28,7 +28,8 @@
     z-index: 900;
 }
 
-:host ::ng-deep .main-container .kpi-summary {
+:host ::ng-deep .main-container .kpi-summary,
+:host ::ng-deep .main-container .kpi-card-container {
     box-shadow: none;
     border: 1px solid #D5DBE1;
     border-radius: 10px;
