--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -1,6 +1,5 @@
-<div style="display: flex;" #addnlFilterDiv>
+<div style="display: flex; overflow-y: visible; overflow-x: visible;" #addnlFilterDiv>
     <ng-container *ngFor="let config of additionalFilterConfig; let i = index;">
-        <div style="overflow-y: visible; overflow-x: visible;">
             <span class="p-float-label"
                 *ngIf="filterData?.length && filterData[i]?.length && config['type'] !== 'singleSelect'"
                 style="margin-left: 10px;">
@@ -8,7 +7,7 @@
                     [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}" [selectionLimit]="6"
                     [selectedItemsLabel]="'{0} selected'" defaultLabel="Select"
                     [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
-                    [options]="filterData[i]" (onChange)="applyAdditionalFilter($event, config.defaultLevel.labelName)">
+                    [options]="filterData[i]" (onChange)="applyAdditionalFilter($event, i + 1, true)">
                 </p-multiSelect>
                 <label class="floating-label" for="multiselectFilter">Select {{ config.defaultLevel.labelName }}</label>
             </span>
@@ -17,11 +16,10 @@
                 <p-dropdown inputId="singleselectFilter" placeholder="Select"
                     [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}"
                     [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
-                    [options]="filterData[i]" (onChange)="applyAdditionalFilter($event, config.defaultLevel.labelName)">
+                    [options]="filterData[i]" (onChange)="applyAdditionalFilter($event, i + 1)">
                 </p-dropdown>
                 <label class="floating-label" for="singleselectFilter">Select {{ config.defaultLevel.labelName
                     }}</label>
             </span>
-        </div>
     </ng-container>
 </div>
