Banners on login and all pages

--- a/UI/src/app/authentication/login/login.component.css
+++ b/UI/src/app/authentication/login/login.component.css
@@ -481,3 +481,7 @@ input[type='password'],
     top: 20px;
     left: 20px;
 }
+
+:host ::ng-deep .p-message .p-message-detail {
+    word-break: break-word;
+}
