--- a/UI/src/app/dashboard/dashboard.component.html
+++ b/UI/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
 
 
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
+<p-messages [(value)]="msgs" [escape]="false"></p-messages>
 <div class="main-container">
 
   <div class="header" #header>
