--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -7,6 +7,7 @@
                     [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}" [selectionLimit]="6"
                     [selectedItemsLabel]="'{0} selected'" defaultLabel="Select"
                     [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
+                    [ngModel]="filterDisplayValue"
                     [options]="filterData[i]" (onChange)="applyAdditionalFilter($event, i + 1, true)">
                 </p-multiSelect>
                 <label class="floating-label" for="multiselectFilter">Select {{ config.defaultLevel.labelName }}</label>
@@ -16,6 +17,7 @@
                 <p-dropdown inputId="singleselectFilter" placeholder="Select"
                     [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}"
                     [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="addnlFilterDiv"
+                    [ngModel]="filterDisplayValue"
                     [options]="filterData[i]" (onChange)="applyAdditionalFilter($event, i + 1)">
                 </p-dropdown>
                 <label class="floating-label" for="singleselectFilter">Select {{ config.defaultLevel.labelName
