--- a/UI/src/app/dashboard/filter/filter.component.html
+++ b/UI/src/app/dashboard/filter/filter.component.html
@@ -436,6 +436,38 @@
                   {{iterationConfigData.capacity?.value?.value ? iterationConfigData.capacity?.value?.value + ' Hours' :
                   'NA'}}</p>
             </span>
+            <span *ngIf="selectedProjectForIteration && selectedProjectForIteration[0]?.additionalFilters?.length">
+               <ul class="p-m-0 p-pl-0 p-d-flex p-flex-wrap">
+                  <ng-container *ngFor="let item of selectedProjectForIteration; let i = index;">
+                     <li class="selectedfilter p-mr-3">
+                        <div class="selected-node">
+                           <div class="selected-node-label p-pl-0"><span class="align-list-marker" [title]="item?.nodeName" [ngStyle]="{'background':colorObj[item.nodeId]?.color}"></span>{{item?.nodeName?.length
+                              <= 20 ? item?.nodeName : item?.nodeName?.slice(0,20)+'...'}} <span class="remove-node p-l-1"
+                                 (click)="removeNode(item.nodeId)" *ngIf="selectedProjectForIteration.length > 1">x</span>
+                           </div>
+                           <div class="p-d-flex" *ngIf="item?.additionalFilters?.length > 0">
+                              <div class="p-d-flex p-align-center" (mouseover)="showDropdown[item?.nodeId] = true"
+                                 (mouseleave)="showDropdown[item?.nodeId] = false">
+                                 <img src="../../../assets/img/ico-filter.svg" alt="Filter" class="p-mr-1" />
+                                 <span class="text-underline">{{item?.additionalFilters?.length + " Filters Selected"}}</span>
+                                 <div class="itemsDropdown border p-p-2" *ngIf="showDropdown[item?.nodeId]"
+                                    (mouseleave)="showDropdown[item?.nodeId] = false">
+                                    <div *ngFor="let key of item?.additionalFilters" class="p-d-flex p-align-center">
+                                       <img *ngIf="key?.labelName?.toLowerCase() !== 'sprint'"
+                                          src="../../../assets/img/ico-square.svg" [alt]="key?.labelName" class="p-mr-1" />
+                                       <img *ngIf="key?.labelName?.toLowerCase() === 'sprint'"
+                                          src="../../../assets/img/arrow-right.svg" alt="sprint" class="p-mr-1" />
+                                       <div class="nodeName p-mr-2">{{key?.nodeName}}</div>
+                                       <div class="btn-remove" (click)="removeItem(key?.labelName, key?.nodeId)">x</div>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </li>
+                  </ng-container>
+               </ul>
+            </span>
          </div>
          <div class="p-d-flex p-align-center">
 
