--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -13,17 +13,18 @@
     border-bottom: 1px solid #c0c0c0;
     padding: 8px 10px;
     letter-spacing: 0px;
-    color: #333333;
     align-items: center;
     font-size: 20px;
     color: #202429;
+    overflow: visible;
 }
 
 .kpi-card-icons {
     display: flex;
 }
 
-.kpi-card-icons i, .kpi-card-icons fa-icon {
+.kpi-card-icons i,
+.kpi-card-icons fa-icon {
     border: 1px solid #707070;
     color: #707070;
     border-radius: 5px;
@@ -77,14 +78,15 @@
 .kpi-card-type-icon:hover {
     transform: scale(1.5);
 }
-.kpi-info-icon{
+
+.kpi-info-icon {
     color: #707070;
     vertical-align: middle;
     margin-right: 5px;
     margin-left: 2px;
 }
 
-.kpi-download-icon{
+.kpi-download-icon {
     height: 24px;
     cursor: pointer;
 }
@@ -118,7 +120,8 @@
 ::ng-deep .kpi-filter .ng-placeholder {
     top: 5px;
 }
-.trend-box{
+
+.trend-box {
     flex: 0 0 33.3333%;
 }
 
@@ -165,19 +168,21 @@
     color: black;
 }
 
-.overlay-heading{
+.overlay-heading {
     font-weight: 500;
     font-size: 1.25rem;
 }
-::ng-deep .sprint-details-overlay{
+
+::ng-deep .sprint-details-overlay {
     width: auto !important;
-    left: 20% !important; right: 20% !important;
+    left: 20% !important;
+    right: 20% !important;
     min-width: 450px;
     z-index: 0 !important;
 
 }
 
-::ng-deep div.inner-content{
+::ng-deep div.inner-content {
     background-color: #fbfbfb;
     margin: -10px -10px;
     padding: 5px 7px;
@@ -185,16 +190,16 @@
     border-radius: 5px;
     box-shadow: 1px 1px #ced9d7;
     color: black;
-  }
+}
 
-  ::ng-deep .inner-wraper .p-tooltip .ui-tooltip{
+::ng-deep .inner-wraper .p-tooltip .ui-tooltip {
     background-color: #fbfbfb;
     color: black;
-  }
+}
 
 
 
-.kpi-value-center{
+.kpi-value-center {
     justify-content: center;
 }
 
@@ -205,22 +210,29 @@
     min-height: 20vh !important;
 
 }
-:host .kpi-card-body{
+
+:host .kpi-card-body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.disable-setting-icon{
+:host .kpi-menu-container {
+    position: absolute;
+    right: 20px;
+}
+
+.disable-setting-icon {
     pointer-events: none;
     opacity: 0.5;
 }
+
 .kpi-card-body.smallChart {
     height: 272px !important;
     min-height: 272px !important;
 }
 
-.custom-pi{
+.custom-pi {
     font-size: 1.1rem;
     font-weight: 1000;
     color: #4a4747;
@@ -234,7 +246,7 @@
     margin-left: 20px;
 }
 
-.info-icon img{
+.info-icon img {
     height: 20px;
 }
 
@@ -265,7 +277,9 @@
     border-radius: 8px !important;
 }
 
-:host ::ng-deep .p-selectbutton .p-button.p-highlight, .p-selectbutton .p-button:focus.p-highlight, .p-selectbutton .p-button:hover.p-highlight {
+:host ::ng-deep .p-selectbutton .p-button.p-highlight,
+.p-selectbutton .p-button:focus.p-highlight,
+.p-selectbutton .p-button:hover.p-highlight {
     border: 2px solid #EAEDF0;
 }
 
@@ -297,3 +311,24 @@
     visibility: hidden;
 }
 
+:host ::ng-deep .p-menu.p-menu-overlay {
+    top: 40px !important;
+    left: 400px !important;
+}
+
+
+.custom-pi {
+    font-size: 1.1rem;
+    font-weight: 1000;
+    color: #4a4747;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+}
+
+.green {
+    color: var(--color-green);
+}
+
+.red {
+    color: var(--color-red);
+}
