--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -1,5 +1,5 @@
 <div class="kpi-card-container">
-    <div class="kpi-card-header p-pr-5 p-pl-5">
+    <div class="kpi-card-header p-pr-5 p-pl-5 p-jc-between">
         <div class="kpi-card-name-placeholder" (mouseleave)="showTooltip(false)" #kpiHeader>
             <div class="kpi-card-title-container">
                 <h3 *ngIf="kpiData">{{kpiData?.kpiName}}</h3>
@@ -20,10 +20,22 @@
                         class="custom-pi pi-bars"></i></span>
             </div>
         </div>
-        <i class="pi pi-ellipsis-v float-right" style="font-size: 20px"></i>
+        <div class="kpi-menu-container" (click)="toggleMenu($event)">
+            <i class="pi pi-ellipsis-v" style="font-size: 20px"></i>
+        </div>
+        <p-menu #kpimenu id= "menu-{{kpiData?.kpiId}}" [popup]="true" [model]="menuItems">
+            <ng-template pTemplate="item" let-item>
+                <div>
+                    <i [class]="item.icon"></i>
+                    <span> {{ item.label }}</span>
+                </div>
+            </ng-template>
+        </p-menu>
     </div>
     <!-- kpiFilter -->
-    <div [ngSwitch]="kpiData?.kpiDetail?.kpiFilter?.toLowerCase()" [ngClass]="{ 'hidden': selectedTab.toLowerCase() === 'developer' }" class="kpi-filter p-pr-5 p-pl-5" #kpiFilterContainer>
+    <div [ngSwitch]="kpiData?.kpiDetail?.kpiFilter?.toLowerCase()"
+        [ngClass]="{ 'hidden': selectedTab.toLowerCase() === 'developer' }" class="kpi-filter p-pr-5 p-pl-5"
+        #kpiFilterContainer>
         <div *ngSwitchCase="'dropdown'" class="p-d-flex p-justify-between">
             <ng-container *ngFor="let filter of dropdownArr;let k = index">
                 <p-dropdown *ngIf="dropdownArr?.length && filter?.options?.length" [options]="filter?.options"
@@ -144,8 +156,26 @@
     </div>
 </p-overlayPanel>
 
-<p-dialog [header]="kpiData?.kpiName" [(visible)]="displayConfigModel" [modal]="true" styleClass="field-mapping">
+<p-dialog [(visible)]="displayConfigModel" [modal]="true" styleClass="field-mapping">
+    <ng-template pTemplate="header">
+        <div class="inline-flex align-items-center justify-content-center gap-2">
+            <p class="font-bold white-space-nowrap">{{kpiData?.kpiName}}</p>
+            <span class="font-bold white-space-nowrap" [ngClass]="{'green': isSyncPassedOrFailed === true, 'red' : ((isSyncPassedOrFailed === false)&& (lastSyncTime !== 'NA'))}">Last Sync: {{lastSyncTime}}
+                <span *ngIf="lastSyncTime !== 'NA'">
+                    <img *ngIf="isSyncPassedOrFailed === true" src="../../../assets/img/icon-success.svg"
+                        alt="Success" class="p-mr-1" />
+                    <img *ngIf="isSyncPassedOrFailed === false" src="../../../assets/img/icon-failure.svg"
+                        alt="Failure" class="p-mr-1" />
+                </span>
+            </span>
+            
+        </div>
+    </ng-template>
     <hr>
+    <div class="p-d-flex p-mt-4 p-mb-4">
+        <b class="p-mr-5"><span>*</span>Mandatory Fields</b>
+        <b><i class="fas fa-sync-alt p-mr-1"></i>Requires processor run</b>
+    </div>
     <ng-template pTemplate="content">
         <app-field-mapping-form #fieldMappingForm
             *ngIf="fieldMappingConfig?.length > 0 && this.selectedToolConfig?.length > 0 && !loading"
@@ -154,10 +184,12 @@
             [selectedConfig]="selectedConfig" [selectedToolConfig]="selectedToolConfig" (reloadKPI)="reloadKPI()"
             [thresholdUnit]="kpiData['kpiDetail']['kpiUnit']"></app-field-mapping-form>
     </ng-template>
-    <ng-template pTemplate="footer"></ng-template>
-    <ng-container *ngIf=" noData && !loading">
-        <h2 class="p-text-center">No Configuration Available</h2>
-    </ng-container>
+    <ng-template pTemplate="footer">
+        <ng-container *ngIf="noData === true && !loading">
+            <h2 class="p-text-center">No Configuration Available</h2>
+        </ng-container>
+    </ng-template>
+    
     <ng-container *ngIf="loading">
         <div class="overlay">
             <div class="loading-img"></div>
