--- a/UI/src/app/dashboard/filter/filter.component.html
+++ b/UI/src/app/dashboard/filter/filter.component.html
@@ -159,7 +159,7 @@
                                     *ngFor="let key of copyFilteredAddFilters[item.hierarchyLevelId]; let i = index">
                                    <div
                                        [formGroupName]="item?.hierarchyLevelId">
-                                       <input type="checkbox" [formControlName]="key.nodeId" (change)="checkedState($event, item?.hierarchyLevelId, key.nodeId)"
+                                       <input type="checkbox" [formControlName]="key.nodeId" (change)="checkedState($event, item?.hierarchyLevelId)"
                                           [checked]="filterForm?.get(item?.hierarchyLevelId)?.value[key.nodeId]"
                                           class="p-mr-1" />
                                     </div>
