DTS-32260 highlight broken connections

--- a/UI/src/app/config/project-config/connection-list/connection-list.component.css
+++ b/UI/src/app/config/project-config/connection-list/connection-list.component.css
@@ -91,3 +91,24 @@ input[type="text"]:disabled, input[type="password"]:disabled {
     padding: .70rem;
     width: 150px;
 }
+
+::ng-deep .highlighted{
+    background-color: red !important;
+    color : white !important;
+}
+
+.tool-tip {
+    position: absolute;
+    text-align: left;
+    min-width: 200px;
+    max-width: 280px;
+    line-height: 1.5;
+    color: var(--color-white);
+    z-index: 8;
+    white-space: pre-line;
+    box-shadow: none;
+    font-size: 0.875rem;
+    background: rgba(97, 97, 97, 0.9);
+    padding: 0.5rem;
+    border-radius: 4px;
+  }
