DTS-32260 jira-config change

--- a/UI/src/app/config/project-config/jira-config/jira-config.component.html
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.html
@@ -58,7 +58,7 @@
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-connection let-columns="columns">
-                <tr>
+                <tr [ngClass]="{'highlighted': connection.brokenConnection}" (mouseenter)="connection.brokenConnection ? mouseEnter($event,connection.connectionErrorMsg) : ''" (mouseleave)="mouseLeave()">
                     <td>
                         <p-tableRadioButton [value]="connection" (click)="onConnectionSelect(connection)">
                         </p-tableRadioButton>
