Issues in Additional Filters

--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -18,7 +18,7 @@
             [primaryFilterConfig]="primaryFilterConfig" [selectedTab]="selectedTab"
             (onPrimaryFilterChange)="handlePrimaryFilterChange($event)"></app-primary-filter>
     </div>
-    <div>
+    <div *ngIf="additionalFilterConfig?.length">
         <app-additional-filter [selectedTab]="selectedTab" [selectedLevel]="selectedLevel" [selectedType]="selectedType"
         [additionalFilterConfig]="additionalFilterConfig"></app-additional-filter>
     </div>
