--- a/UI/src/app/component/recommendations/recommendations.component.html
+++ b/UI/src/app/component/recommendations/recommendations.component.html
@@ -11,7 +11,53 @@
         </div>
     </p-header>
     <div class="dialog-body p-mb-4">
-        
+        <p-tabView>
+            <p-tabPanel *ngFor="let tab of tabs" [header]="tab">
+                <p-table [value]="tabsContent[tab]" [tableStyle]="{ 'min-width': '50rem' }"
+                [globalFilterFields]="['maturity']">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th id="kpiName">KPI Name</th>
+                            <th id="maturity">Maturity Level</th>
+                            <th id="recommendation">Recommendation</th>
+                            <th id="details">Details</th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <p-columnFilter type="text" field="kpiName"></p-columnFilter>
+                            </th>
+                            <th>
+                                <p-columnFilter field="maturity" matchMode="in" [showMenu]="false">
+                                    <ng-template pTemplate="filter" let-value let-filter="filterCallback">
+                                        <p-multiSelect [ngModel]="value" [options]="maturities" placeholder="Select maturity" (onChange)="filter($event)">
+                                            <ng-template let-option pTemplate="item">
+                                                <div class="inline-block vertical-align-middle">
+                                                    <span class="ml-1 mt-1">{{ option }}</span>
+                                                </div>
+                                            </ng-template>
+                                        </p-multiSelect>
+                                    </ng-template>
+                                </p-columnFilter>
+                            </th>
+                            <th>
+                                <p-columnFilter type="text" field="recommendation"></p-columnFilter>
+                            </th>
+                            <th>
+                                <p-columnFilter type="text" field="details"></p-columnFilter>
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-item>
+                        <tr>
+                            <td>{{ item.kpiName }}</td>
+                            <td>{{ "M"+item.maturity }}</td>
+                            <td>{{ item.recommendationSummary }}</td>
+                            <td>{{ item.recommendationDetails }}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </p-tabPanel>
+        </p-tabView>
     </div>
 
 </p-dialog>
