--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -1,8 +1,7 @@
 <div class="filter-container p-p-2" [ngClass]="kanbanRequired ? 'p-jc-between' : 'p-jc-center'">
     <div class="p-d-flex" *ngIf="kanbanRequired">
         <div class="tabs">
-            <div class="tab" (click)="setSelectedType('Scrum')" 
-            [ngClass]="{ 'active': selectedType === 'scrum' }">Scrum
+            <div class="tab" (click)="setSelectedType('Scrum')" [ngClass]="{ 'active': selectedType === 'scrum' }">Scrum
             </div>
             <div class="tab" (click)="setSelectedType('Kanban')"
                 [ngClass]="{ 'active': selectedType === 'kanban', 'disabled': !kanbanRequired }">
@@ -10,20 +9,20 @@
         </div>
     </div>
     <div class="p-d-flex p-fluid" *ngIf="filterDataArr[selectedType]">
-        <app-parent-filter *ngIf="getObjectKeys(parentFilterConfig).length" class="p-mr-2" 
+        <app-parent-filter *ngIf="getObjectKeys(parentFilterConfig).length" class="p-mr-2"
             [filterData]="filterDataArr[selectedType]" [selectedTab]="selectedTab"
-            (onSelectedLevelChange)="handleParentFilterChange($event)" [selectedType]="selectedType" [selectedTab]="selectedTab"
-            [parentFilterConfig]="parentFilterConfig"></app-parent-filter>
-        <app-primary-filter [filterData]="filterDataArr[selectedType]" [selectedLevel]="selectedLevel" [selectedType]="selectedType"
-            [primaryFilterConfig]="primaryFilterConfig" [selectedTab]="selectedTab"
+            (onSelectedLevelChange)="handleParentFilterChange($event)" [selectedType]="selectedType"
+            [selectedTab]="selectedTab" [parentFilterConfig]="parentFilterConfig"></app-parent-filter>
+        <app-primary-filter [filterData]="filterDataArr[selectedType]" [selectedLevel]="selectedLevel"
+            [selectedType]="selectedType" [primaryFilterConfig]="primaryFilterConfig" [selectedTab]="selectedTab"
             (onPrimaryFilterChange)="handlePrimaryFilterChange($event)"></app-primary-filter>
     </div>
     <div *ngIf="additionalFilterConfig?.length">
         <app-additional-filter [selectedTab]="selectedTab" [selectedLevel]="selectedLevel" [selectedType]="selectedType"
-        [additionalFilterConfig]="additionalFilterConfig"></app-additional-filter>
+            [additionalFilterConfig]="additionalFilterConfig"></app-additional-filter>
     </div>
 </div>
-<div class="selected-filter-container">
+<div class="selected-filter-container p-d-flex p-jc-between p-pl-3 p-pr-3">
     <ul class="p-m-0 p-pl-0 p-d-flex p-flex-wrap">
         <ng-container *ngIf="getObjectKeys(colorObj).length">
             <ng-container *ngFor="let item of getObjectKeys(colorObj); let i = index;">
@@ -42,4 +41,41 @@
             </ng-container>
         </ng-container>
     </ul>
+    <div class="date-filter-container">
+        <!-- Date filter start -->
+        <div *ngIf="(kanban && selectedDateFilter !== '') || this.selectedTab?.toLowerCase() === 'developer'"
+            class="selected-date p-ml-auto p-mr-2 p-mt-auto p-align-end">
+            <img src="../../../assets/img/ico-date.svg" alt="date" class="p-mr-1" />
+            <span>{{selectedDateFilter}}</span>
+        </div>
+        <div class="position-relative" *ngIf="kanban || this.selectedTab?.toLowerCase() === 'developer'">
+            <div class="btn-custom p-d-flex p-align-center p-text-uppercase p-p-2 rounded p-ml-2 filter-btn"
+                #dateToggleButton [ngClass]="{'active': toggleDateDropdown}"
+                (click)="toggleDateDropdown = !toggleDateDropdown">
+                Date
+            </div>
+            <div class="filter-options-container date-filter-dropdown" *ngIf="toggleDateDropdown" #dateDrpmenu>
+                <div class="filter-options filter-date">
+                    <div class="p-buttonset">
+                        <button pButton type="button" class="p-button-secondary p-button-sm"
+                            *ngFor='let label of dateRangeFilter?.types'
+                            [ngClass]="{'btn-active': selectedDayType === label}" label={{label}}
+                            (click)="setSelectedDateType(label)"></button>
+                    </div>
+                    <div class="ui-g-12" *ngFor='let count of dateRangeFilter?.counts;'>
+                        <p-radioButton value="{{count}}" label="{{count}}" [(ngModel)]="selectedDateValue"
+                            inputId="{{count}}"></p-radioButton>
+                    </div>
+                </div>
+                <div class="p-d-flex p-justify-end p-align-center p-mt-1 btn-container">
+                    <button pButton pRipple label="Cancel" icon="pi pi-times"
+                        class="p-button-secondary p-button-text p-mr-2 p-button-sm"
+                        (click)="toggleDateDropdown = false"></button>
+                    <button pButton pRipple label="Apply" icon="pi pi-save" class="p-button-secondary p-button-sm"
+                        (click)="applyDateFilter()"></button>
+                </div>
+            </div>
+        </div>
+        <!-- Date filter end -->
+    </div>
 </div>
