--- a/UI/src/app/dashboard/filter/filter.component.html
+++ b/UI/src/app/dashboard/filter/filter.component.html
@@ -53,7 +53,7 @@
                                     class="p-button-secondary p-button-text p-mr-2 p-button-sm"
                                     (click)="handleClose()"></button>
                                  <button pButton pRipple label="Apply" icon="pi pi-save"
-                                    class="p-button-secondary p-button-sm" (click)="onSelectedTrendValueChange()"
+                                    class="p-button-secondary p-button-sm" (click)="onSelectedTrendValueChange(true)"
                                     [disabled]="filterForm.get('selectedTrendValue')?.value?.length == 0"></button>
                               </div>
                            </ng-template>
@@ -65,7 +65,7 @@
                            [items]="trendLineValueList"
                            bindLabel="nodeName"
                            bindValue="nodeId"
-                           [closeOnSelect]="true" (change)="selectedTab?.toLowerCase() === 'iteration' ? handleIterationFilters('project') : (selectedTab?.toLowerCase() === 'release') ? handleMilestoneFilter('project') : onSelectedTrendValueChange()"
+                           [closeOnSelect]="true" (change)="selectedTab?.toLowerCase() === 'iteration' ? handleIterationFilters('project',true) : (selectedTab?.toLowerCase() === 'release') ? handleMilestoneFilter('project') : onSelectedTrendValueChange(true)"
                            class="trend-line-value p-pb-0">
                            <ng-template ng-option-tmp let-item="item" let-index="index">
                               {{item.nodeName}}
@@ -75,7 +75,7 @@
                      </div>
                      <div *ngIf="selectedTab?.toLowerCase() === 'iteration'" class="form-check filter-box p-col-lg trend-line-container sprint-filter abc iteration-selected-sprint">
                      <ng-select  formControlName="selectedSprintValue" [dropdownPosition]="'bottom'"
-                        (change)="handleIterationFilters('sprint')" placeholder="Sprint" [clearable]="false"
+                        (change)="handleIterationFilters('sprint',true)" placeholder="Sprint" [clearable]="false"
                         class="p-pb-0">
                         <ng-option *ngFor="let item of filteredAddFilters['sprint']" [value]="item.nodeId">
                            {{item.nodeName}}{{item.sprintState?.toLowerCase() === 'active'? ' (Active)' : ' (Closed)'}}
@@ -92,7 +92,7 @@
                      </ng-select>
                   </div>
                   </div>
-                  <div class="p-d-flex p-align-end" *ngIf="this.selectedTab?.toLowerCase() !== 'maturity' && selectedTab?.toLowerCase() !== 'backlog' && selectedTab?.toLowerCase() !== 'iteration' && selectedTab?.toLowerCase() !== 'release'">
+                  <div class="p-d-flex p-align-end" *ngIf="this.selectedTab?.toLowerCase() !== 'maturity' && selectedTab?.toLowerCase() !== 'backlog' && selectedTab?.toLowerCase() !== 'release'">
                      <!-- Date filter start -->
                      <div *ngIf="(kanban && selectedDateFilter !== '') || this.selectedTab?.toLowerCase() === 'developer'"
                         class="selected-date p-ml-auto p-mr-2 p-mt-auto p-align-end">
@@ -133,7 +133,7 @@
                      <div class="p-d-flex"
                         *ngIf="selectedTab?.toLowerCase() !== 'value' && selectedTab?.toLowerCase() !== 'maturity' && selectedTab?.toLowerCase() !== 'dora' && selectedTab?.toLowerCase() !== 'developer'">
                         <div *ngFor="let item of additionalFiltersArr; let i = index;" class="position-relative">
-                           <div *ngIf="item?.hierarchyLevelId !== 'release'"
+                           <div *ngIf="item?.hierarchyLevelId !== 'release'  && !(item?.hierarchyLevelId === 'sprint' && selectedTab?.toLowerCase() === 'iteration')"
                               class="btn-custom p-d-flex p-align-center p-text-uppercase p-p-2 rounded p-ml-2 filter-btn"
                               [ngClass]="{'active': toggleDropdownObj[item?.hierarchyLevelId], 'disabled': isAddFilterDisabled(item?.hierarchyLevelId)}"
                               (click)="toggleDropdownObj[item.hierarchyLevelId] = !toggleDropdownObj[item.hierarchyLevelId]"
@@ -145,12 +145,10 @@
                               <div class="filter-options">
                                  <label class="checkbox-modified"
                                     *ngFor="let key of filteredAddFilters[item.hierarchyLevelId]; let i = index">
-                                    <input type="radio" *ngIf="item?.hierarchyLevelId !== 'sprint'"
-                                       [formControlName]="item?.hierarchyLevelId" [value]="key.nodeId" class="p-mr-1" />
-                                    <div *ngIf="item?.hierarchyLevelId === 'sprint'"
+                                    <div 
                                        [formGroupName]="item?.hierarchyLevelId">
                                        <input type="checkbox" [formControlName]="key.nodeId"
-                                          [checked]="filterForm?.get(item?.hierarchyLevelId)?.value[key.nodeId]"
+                                          [checked]="filterForm?.get(item?.hierarchyLevelId)?.value[key.nodeId]" (change)="checkedState($event, item?.hierarchyLevelId)"
                                           class="p-mr-1" />
                                     </div>
                                     {{key.nodeName}}
@@ -162,7 +160,7 @@
                                     (click)="toggleDropdownObj[item?.hierarchyLevelId] = false"></button>
                                  <button pButton pRipple label="Apply" icon="pi pi-save"
                                     class="p-button-secondary p-button-sm"
-                                    (click)="applyChanges(item?.hierarchyLevelId)"
+                                    (click)="selectedTab?.toLowerCase() === 'iteration' ? handleIterationFilters('sqd', true) : applyChanges(item?.hierarchyLevelId)"
                                     [attr.disabled]="checkIfBtnDisabled(item?.hierarchyLevelId)"></button>
                               </div>
                            </div>
@@ -175,20 +173,6 @@
          </div>
 
          <div class="p-d-flex p-align-center">
-            <div class="last-sync-date-block" *ngIf="selectedTab?.toLowerCase() === 'iteration'">
-               <div class="p-d-flex p-align-center p-jc-end">
-                  <img *ngIf="selectedProjectLastSyncStatus === 'SUCCESS'" src="../../../assets/img/icon-success.svg" alt="Success" class="p-mr-1"/>
-                  <img *ngIf="!((lastSyncData | json) == '{}') && !lastSyncData?.fetchSuccessful && !lastSyncData?.errorInFetch" src="../../../assets/img/icon-time.svg" alt="Time" class="p-mr-1" />
-                  <img *ngIf="selectedProjectLastSyncStatus === 'FAILURE'" src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" />
-                  <h4 class="label-text p-text-right p-mt-0 p-mb-0 p-mr-2">
-                     Last Sync
-                  </h4>
-
-               </div>
-               <p class="last-sync-date p-m-0 p-text-right">
-                  {{selectedProjectLastSyncDate != 'NA' ? (selectedProjectLastSyncDate | date :'dd-MMM-yyyy (EEE) h:mm:ss a') : 'NA' }}
-               </p>
-            </div>
 
             <!-- SHow/Hide start for iteration and backlog -->
 
@@ -438,8 +422,57 @@
                   {{iterationConfigData.capacity?.value?.value ? iterationConfigData.capacity?.value?.value + ' Hours' :
                   'NA'}}</p>
             </span>
+
+            <span *ngIf="selectedTab?.toLowerCase() === 'iteration' && selectedProjectForIteration && selectedProjectForIteration[0]?.additionalFilters?.length">
+               <ul class="p-m-0 p-pl-0 p-d-flex p-flex-wrap">
+                  <ng-container *ngFor="let item of selectedProjectForIteration; let i = index;">
+                     <li class="selectedfilter p-mr-3">
+                        <div class="selected-node">
+                           <div class="selected-node-label p-pl-0"><span class="align-list-marker" [title]="item?.nodeName" [ngStyle]="{'background':colorObj[item.nodeId]?.color}"></span>{{item?.nodeName?.length
+                              <= 20 ? item?.nodeName : item?.nodeName?.slice(0,20)+'...'}} <span class="remove-node p-l-1"
+                                 (click)="removeNode(item.nodeId)" *ngIf="selectedProjectForIteration.length > 1">x</span>
+                           </div>
+                           <div class="p-d-flex" *ngIf="item?.additionalFilters?.length > 0">
+                              <div class="p-d-flex p-align-center" (mouseover)="showDropdown[item?.nodeId] = true"
+                                 (mouseleave)="showDropdown[item?.nodeId] = false">
+                                 <img src="../../../assets/img/ico-filter.svg" alt="Filter" class="p-mr-1" />
+                                 <span class="text-underline">{{item?.additionalFilters?.length + " Filters Selected"}}</span>
+                                 <div class="itemsDropdown border p-p-2" *ngIf="showDropdown[item?.nodeId]"
+                                    (mouseleave)="showDropdown[item?.nodeId] = false">
+                                    <div *ngFor="let key of item?.additionalFilters" class="p-d-flex p-align-center">
+                                       <img *ngIf="key?.labelName?.toLowerCase() !== 'sprint'"
+                                          src="../../../assets/img/ico-square.svg" [alt]="key?.labelName" class="p-mr-1" />
+                                       <img *ngIf="key?.labelName?.toLowerCase() === 'sprint'"
+                                          src="../../../assets/img/arrow-right.svg" alt="sprint" class="p-mr-1" />
+                                       <div class="nodeName p-mr-2">{{key?.nodeName}}</div>
+                                       <div class="btn-remove" (click)="removeItem(key?.labelName, key?.nodeId)">x</div>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </li>
+                  </ng-container>
+               </ul>
+            </span>
          </div>
          <div class="p-d-flex p-align-center">
+
+            <div class="last-sync-date-block" *ngIf="selectedTab?.toLowerCase() === 'iteration'">
+               <div class="p-d-flex p-align-center p-jc-end">
+                  <img *ngIf="selectedProjectLastSyncStatus === 'SUCCESS'" src="../../../assets/img/icon-success.svg" alt="Success" class="p-mr-1"/>
+                  <img *ngIf="selectedProjectLastSyncStatus === 'NA' && !lastSyncData?.fetchSuccessful" src="../../../assets/img/icon-time.svg" alt="Time" class="p-mr-1" />
+                  <img *ngIf="selectedProjectLastSyncStatus === 'FAILURE'" src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" />
+                  <h4 class="label-text p-text-right p-mt-0 p-mb-0 p-mr-2">
+                     Last Sync
+                  </h4>
+ 
+               </div>
+               <p class="last-sync-date p-m-0 p-text-right">
+                  {{selectedProjectLastSyncStatus != 'NA' ? (selectedProjectLastSyncDate | date :'dd-MMM-yyyy (EEE) h:mm:ss a') : 'NA' }}
+               </p>
+            </div>
+
             <div class="p-mr-2" *ngIf="this.selectedSprint['sprintState'] === 'ACTIVE' && !isGuest && selectedTab?.toLowerCase() === 'iteration'">
                <span class="refresh-state p-p-2" (click)="displayModal = true"
                *ngIf=" (lastSyncData | json) == '{}' || lastSyncData.errorInFetch">
